# FitsView

./: pyproject.toml
fitsview/: FitsView.py  FitsView_gui.py  FitsView_image.py
