[tool.poetry]
name = "fitsview"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fitsview"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
matplotlib = "^3.7.2"
astropy = "^5.3.3"
pyqt5 = "^5.15.9"
scipy = "^1.11.2"

[tool.poetry.scripts]
FitsView = "fitsview.FitsView:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
